// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthEndpoint the login calls post parent method 1`] = `
Array [
  "/login",
  Object {
    "data": Object {
      "email": "email",
      "password": "password",
      "remember": false,
    },
  },
]
`;

exports[`AuthEndpoint the logout calls post parent method 1`] = `
Array [
  "/logout",
]
`;

exports[`AuthEndpoint the resetPassword calls post parent method 1`] = `
Array [
  "/password/reset",
  Object {
    "data": Object {
      "email": "email",
      "password": "password",
      "password_confirmation": "password",
      "token": "token",
    },
  },
]
`;
